<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp">

				<android.support.v7.widget.AppCompatImageView
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:id="@+id/symbolactivityImageView"/>

				<HorizontalScrollView
					android:layout_width="match_parent"
					android:layout_height="50dp">

					<LinearLayout
						android:layout_width="wrap_content"
						android:orientation="vertical"
						android:layout_height="50dp"
						android:gravity="center_vertical">

						<android.support.v7.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/symbolactivityTextViewDemangledName"
							android:textIsSelectable="true"
							android:maxLines="1"
							android:textSize="15sp"/>

						<android.support.v7.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/symbolactivityTextViewName"
							android:textIsSelectable="true"
							android:maxLines="1"
							android:textSize="10sp"
							android:layout_marginTop="2dp"/>

					</LinearLayout>

				</HorizontalScrollView>

			</LinearLayout>

			<View
				android:layout_height="1dp"
				android:layout_width="match_parent"
				android:background="#44A1FF"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/typeName"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/symbolactivityTextViewType"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:text="@string/className"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/symbolactivityTextClass"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:text="@string/mainName"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/symbolactivityTextViewSymbolMainName"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:text="@string/argumentsName"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/symbolactivityTextViewArguments"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:text="@string/sizeName"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<android.support.v7.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/symbolactivityTextViewSize"/>

			</LinearLayout>

			<View
				android:layout_height="1dp"
				android:layout_width="match_parent"
				android:background="#44A1FF"/>

		</LinearLayout>

	</ScrollView>

	<android.support.v7.widget.AppCompatTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="90dp"
		android:layout_marginBottom="120dp"
		android:background="#CCCCCC"
		android:visibility="gone"
		android:id="@+id/symbolactivityTextViewButtonFloat"
		android:text="@string/ownedVtable"/>

	<android.support.design.widget.FloatingActionButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="30dp"
		android:src="@drawable/ic_lumx"
		android:layout_marginBottom="100dp"
		android:onClick="toVtableActivity"
		android:id="@+id/symbolactivityButtonFloat"
		android:visibility="gone"/>

	<android.support.v7.widget.AppCompatTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="90dp"
		android:layout_marginBottom="50dp"
		android:background="#CCCCCC"
		android:visibility="gone"
		android:id="@+id/symbolactivityTextViewButtonFloatClass"
		android:text="@string/targetClass"/>

	<android.support.design.widget.FloatingActionButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="30dp"
		android:src="@drawable/ic_package_variant"
		android:layout_marginBottom="30dp"
		android:onClick="toClassActivity"
		android:id="@+id/symbolactivityButtonFloatClass"
		android:visibility="gone"/>

</RelativeLayout>

